--- a/scoreboard.html
+++ b/scoreboard.html
@@ -18,6 +18,7 @@
                 <a class="navbar-brand" href="#"><img src="assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
                 <div class="navbar-nav">
                       <a class="nav-item nav-link" href="#">Scoreboard</a>
+                      <a class="nav-item nav-link" href="#">Organizzatori</a>
                     </div>        
             </div>
         </nav>
