--- a/who.html
+++ b/who.html
@@ -24,18 +24,44 @@
         </nav>
         <!-- Page content-->
         <div class="container">
-           <div class="row align-items-center text-center">
-                <h1>Welcome to CyberCup.IT <img src="assets/logo.png" width="50" height="50" alt=""></h1>
+          <section class="bg-light pt-5 pb-5 shadow-sm">
+  <div class="container">
+    <div class="row pt-5">
+      <div class="col-12">
+        <h3 class="border-bottom mb-4 text-center">Organizzatori CyberCup 2023</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+        <div class="card">
+          <img src="https://ionicframework.com/docs/img/demos/avatar.svg" class="card-img-top" alt="Card Image">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Pippo Pluto 1</h5>
+            <p class="card-text mb-4">President</p>
           </div>
-          <div class="row align-items-center text-center">
-               <h2>What is CyberCup?</h2>
-               <p>CyberCup is cool</p>
-           </div>
-          <div class="row align-items-center text-center">
-               <h2>Join Us!</h2>
-               <a href="#">Link to registration form</a>
-           </div>
-            <br><br>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+        <div class="card">
+          <img src="https://ionicframework.com/docs/img/demos/avatar.svg" class="card-img-top" alt="Card Image">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Pippo Pluto 2</h5>
+            <p class="card-text mb-4">Vice-President</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+        <div class="card">
+          <img src="https://ionicframework.com/docs/img/demos/avatar.svg" class="card-img-top" alt="Card Image">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Pippo Pluto 3</h5>
+            <p class="card-text mb-4">Developer</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <br>
 <br>
 <br>
@@ -49,7 +75,10 @@
 <br>
 <br>
 <br>
-<br><br>
+<br>
+<br>
+<br>
+<br>
 
         </div>
 <footer class="bg-light text-center text-lg-start">
