--- a/index.html
+++ b/index.html
@@ -25,31 +25,79 @@
         <!-- Page content-->
         <div class="container">
            <div class="row align-items-center text-center">
-                <h1>Welcome to CyberCup.IT <img src="assets/logo.png" width="50" height="50" alt=""></h1>
+                <h1>CyberCup.IT 2023<img src="assets/logo.png" width="50" height="50" alt=""></h1>
           </div>
           <div class="row align-items-center text-center">
-               <h2>What is CyberCup?</h2>
-               <p>CyberCup is cool</p>
+               <h2>Cos'è CyberCup?</h2>
+               <p>Il progetto si propone come avanzamento rispetto al programma CyberChallenge.IT, e, in particolare, come punto di raccordo fra la conclusione del suddetto programma di formazione e i grandi eventi europei (European CyberSecurity Challenge - ECSC) e continentali (International CyberSecurity Challenge - ICC). Il programma consiste in un torneo Capture The Flag, costituito da vari eventi selezionati tra le gare internazionali a disposizione. Al torneo potranno partecipare tutte le squadre (senza limiti al numero di partecipanti) che si iscriveranno, incluse quelle di nuova costituzione.</p>
+           </div>
+           <div class="row align-items-center text-center">
+               <h2>Come funziona?</h2>
+               <p>La competizione sarà caratterizzata da un <a href="scoreboard.html">ranking</a> generale e personalizzato delle squadre calcolato dalle loro performance ad ogni gara. Rispetto ad organizzazioni come CTFTime, gli eventi di CyberCup verranno accuratamente scelti in accordo alla qualità e al livello di difficoltà da un team di esperti (comitato tecnico), prediligendo le competizioni organizzate da università e da squadre CTF italiane. Gli eventi avranno una difficoltà bilanciata in modo da accogliere sia squadre con poca esperienza che quelle più preparate. Il progetto auspica anche la collaborazione del Laboratorio Nazionale di CyberSecurity per poter ospitare e premiare le squadre durante la finale di CyberChallenge.IT.</p>
+           </div>
+           <div class="row align-items-center text-left">
+               <h2 class="text-center">Obbiettivi</h2>
+               <ul style="list-style-type: square;">
+                <li>Fornire ai partecipanti che hanno completato il percorso CyberChallenge.IT un’ulteriore motivazione e prospettiva per continuare la crescita tecnica</li>
+                <li>Favorire la formazione di nuovi team Capture the Flag (in particolare, coinvolgendo le sedi più giovani partecipanti a CyberChallenge.IT)</li>
+                <li>Incentivare la creazione e lo sviluppo di nuove competizioni da parte di squadre CTF italiane.</li>
+               </ul> 
+           </div>
+            <div class="row align-items-center text-left">
+               <h2 class="text-center">Struttura</h2>
+               <ul style="list-style-type: square;">
+                <li>Il progetto pilota avrà una durata di sei mesi (gennaio/giugno 2023)</li>
+                <li>Le gare valide per il campionato saranno selezionate da un comitato tecnico formato da esperti e giocatori CTF. Potranno essere selezionate solo gare organizzate da team CTF no profit e dalle Università, tenendo fuori gli eventi organizzati dalle aziende private. Saranno valide sia gare online che in presenza</li>
+                <li>Il numero di eventi pubblicizzati per CyberCup sarà inferiore a dieci, uno al mese o uno ogni due mesi, a seconda degli eventi a calendario, che non sempre sono dichiarati con largo anticipo</li>
+                <li>La classifica sarà organizzata secondo il meccanismo a descritto nella sezione "Punteggio"</li> 
+                <li>La partecipazione a CyberCup.it sarà aperta a tutte le squadre che vorranno registrarsi, ma potranno essere premiate solo quelle che hanno ricevuto un endorsement ufficiale da uno dei responsabili di sede del progetto CyberChallenge.it (le squadre interessate a tale endorsement possono contattare il relativo responsabile di sede)</li>
+               </ul> 
+           </div>
+           <div class="row align-items-center text-left">
+               <h2 class="text-center">Punteggio</h2>
+               <ul style="list-style-type: square;">
+                <p>La classifica sarà organizzata secondo i seguenti parametri:</p>
+                <li>Competizioni di tipo Jeopardy</li>
+                <ul>
+                  <li>1° Classificato: 50 punti</li>
+                  <li>2°/5° Classificati: 45 punti</li>
+                  <li>6°/10° Classificati: 40 punti</li>
+                  <li>11°/20° Classificati: 35 punti</li>
+                  <li>21°/50° Classificati: 25 punti</li>
+                  <li>51°/100° Classificati: 15 punti</li>
+                  <li>Risoluzione di almeno una challenge oltre quella di benvenuto: 5 punti</li>
+                  <li>Risoluzione della challenge benvenuto: 1 punto</li>
+                </ul>
+                <li>Competizioni di tipo Attack/Defense</li>
+                <ul>
+                  <li>1° Classificato: 100 punti</li>
+                  <li>2°/3° Classificati: 80 punti</li>
+                  <li>4°/5° Classificati: 70 punti</li>
+                  <li>6°/10° Classificati: 60 punti</li>
+                  <li>11°/20° Classificati: 50 punti</li>
+                  <li>21°/50° Classificati: 30 punti</li>
+                  <li>51°/100° Classificati: 10 punti</li>
+                  <li>Conquista di almeno una flag: 5 punti</li>
+                  <li>Partecipazione: 1 punto</li>
+                </ul>
+                <li>Peso delle competizioni</li>
+                <p>Il peso delle competizioni sarà determinato in base al numero di team iscritti. Se il numero di partecipanti che hanno preso almeno la challenge di benvenuto è inferiore al numero di soglia per applicazione del punteggio, il punteggio di classifica non si applica. Le competizioni avranno un peso, applicato al punteggio di classifica, in base al numero di </p>
+                <ul>
+                  <li>Peso 1 se gli iscritti sono più di 100</li>
+                  <li>Peso 0.75 se gli iscritti sono tra i 50 e i 99</li>
+                  <li>Peso 0.5 se gli iscritti sono tra i 20 e i 49</li>
+                  <li>Peso 0.25 se gli iscritti sono meno di 20</li>
+                </ul>
+               </ul> 
+           </div>
+            <div class="row align-items-center text-center">
+               <h2>Costi</h2>
+               <p>Al momento l'iniziativa è completamente gratuita</p>
            </div>
           <div class="row align-items-center text-center">
-               <h2>Join Us!</h2>
-               <a href="#">Link to registration form</a>
+               <h2>Iscriviti compilando il seguente form!</h2>
+               <a href="#">Registrazione</a>
            </div>
-            <br><br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br><br>
 
         </div>
 <footer class="bg-light text-center text-lg-start">
