--- a/index.html
+++ b/index.html
@@ -13,46 +13,62 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
-                <div class="navbar-nav">
-                      <a class="nav-item nav-link" href="#">Scoreboard</a>
-                      <a class="nav-item nav-link" href="#">Organizzatori</a>
-                    </div>        
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/scoreboard.html">Scoreboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
+                </li>
+              </ul>
             </div>
+            <div class="navbar-nav">                     
+              <a class="btn btn-primary btn-lg" href="#" role="button">Iscriviti</a>
+            </div>        
+          </div>
         </nav>
         <!-- Page content-->
         <div class="container">
            <div class="row align-items-center text-center">
                 <h1>CyberCup.IT 2023<img src="assets/logo.png" width="50" height="50" alt=""></h1>
           </div>
+        </div>
+        <div class="container-fluid text-center" style="background-color: #e3f2fd;">
+          <div class="jumbotron jumbotron-fluid justify-content-center">
+            <hr class="my-4">
+            <h1 class="display-4">Coppa Italiana CTF</h1>
+            <p class="lead">CyberCup è il primo torneo italiano di Capture The Flag</p>
+            <p class="lead">
+              <a class="btn btn-primary btn-lg" href="#" role="button">Iscriviti</a>
+            </p>
+            <hr class="my-4">
+          </div>
+        </div>
+        <div class="container">
           <div class="row align-items-center text-center">
-               <h2>Cos'è CyberCup?</h2>
-               <p>Il progetto si propone come avanzamento rispetto al programma CyberChallenge.IT, e, in particolare, come punto di raccordo fra la conclusione del suddetto programma di formazione e i grandi eventi europei (European CyberSecurity Challenge - ECSC) e continentali (International CyberSecurity Challenge - ICC). Il programma consiste in un torneo Capture The Flag, costituito da vari eventi selezionati tra le gare internazionali a disposizione. Al torneo potranno partecipare tutte le squadre (senza limiti al numero di partecipanti) che si iscriveranno, incluse quelle di nuova costituzione.</p>
+               <h2>Come funziona CyberCup?</h2>
+               <p>Il programma consiste in un torneo Capture The Flag, costituito da vari eventi selezionati tra le gare internazionali a disposizione. Al torneo potranno partecipare tutte le squadre (senza limiti al numero di partecipanti) che si iscriveranno, incluse quelle di nuova costituzione. La competizione sarà caratterizzata da un <a href="scoreboard.html">ranking</a> delle squadre, il punteggio dipende dalle performance ad ogni gara selezionata. Gli eventi di CyberCup verranno accuratamente scelti in accordo alla qualità e al livello di difficoltà da un comitato tecnico. Avranno maggiore priorità le competizioni organizzate da università e da squadre CTF italiane. Gli eventi avranno una difficoltà bilanciata in modo da accogliere sia squadre con poca esperienza che quelle più preparate.</p>
            </div>
-           <div class="row align-items-center text-center">
-               <h2>Come funziona?</h2>
-               <p>La competizione sarà caratterizzata da un <a href="scoreboard.html">ranking</a> generale e personalizzato delle squadre calcolato dalle loro performance ad ogni gara. Rispetto ad organizzazioni come CTFTime, gli eventi di CyberCup verranno accuratamente scelti in accordo alla qualità e al livello di difficoltà da un team di esperti (comitato tecnico), prediligendo le competizioni organizzate da università e da squadre CTF italiane. Gli eventi avranno una difficoltà bilanciata in modo da accogliere sia squadre con poca esperienza che quelle più preparate. Il progetto auspica anche la collaborazione del Laboratorio Nazionale di CyberSecurity per poter ospitare e premiare le squadre durante la finale di CyberChallenge.IT.</p>
-           </div>
-           <div class="row align-items-center text-left">
-               <h2 class="text-center">Obbiettivi</h2>
-               <ul style="list-style-type: square;">
-                <li>Fornire ai partecipanti che hanno completato il percorso CyberChallenge.IT un’ulteriore motivazione e prospettiva per continuare la crescita tecnica</li>
-                <li>Favorire la formazione di nuovi team Capture the Flag (in particolare, coinvolgendo le sedi più giovani partecipanti a CyberChallenge.IT)</li>
-                <li>Incentivare la creazione e lo sviluppo di nuove competizioni da parte di squadre CTF italiane.</li>
-               </ul> 
-           </div>
-            <div class="row align-items-center text-left">
-               <h2 class="text-center">Struttura</h2>
-               <ul style="list-style-type: square;">
-                <li>Il progetto pilota avrà una durata di sei mesi (gennaio/giugno 2023)</li>
-                <li>Le gare valide per il campionato saranno selezionate da un comitato tecnico formato da esperti e giocatori CTF. Potranno essere selezionate solo gare organizzate da team CTF no profit e dalle Università, tenendo fuori gli eventi organizzati dalle aziende private. Saranno valide sia gare online che in presenza</li>
-                <li>Il numero di eventi pubblicizzati per CyberCup sarà inferiore a dieci, uno al mese o uno ogni due mesi, a seconda degli eventi a calendario, che non sempre sono dichiarati con largo anticipo</li>
-                <li>La classifica sarà organizzata secondo il meccanismo a descritto nella sezione "Punteggio"</li> 
-                <li>La partecipazione a CyberCup.it sarà aperta a tutte le squadre che vorranno registrarsi, ma potranno essere premiate solo quelle che hanno ricevuto un endorsement ufficiale da uno dei responsabili di sede del progetto CyberChallenge.it (le squadre interessate a tale endorsement possono contattare il relativo responsabile di sede)</li>
-               </ul> 
-           </div>
+         </div>
+           <div class="container-fluid text-center" style="background-color: #e3f2fd;">
+          <div class="jumbotron jumbotron-fluid justify-content-center">
+            <hr class="my-4">
+            <h1 class="display-4">Organizzatori</h1>
+            <p class="lead">Scopri chi sono gli organizzatori del progetto</p>
+            <p class="lead">
+              <a class="btn btn-primary btn-lg" href="#" role="button">Vai</a>
+            </p>
+            <hr class="my-4">
+          </div>
+        </div>
+        <div class="container">
            <div class="row align-items-center text-left">
                <h2 class="text-center">Punteggio</h2>
                <ul style="list-style-type: square;">
@@ -90,15 +106,6 @@
                 </ul>
                </ul> 
            </div>
-            <div class="row align-items-center text-center">
-               <h2>Costi</h2>
-               <p>Al momento l'iniziativa è completamente gratuita</p>
-           </div>
-          <div class="row align-items-center text-center">
-               <h2>Iscriviti compilando il seguente form!</h2>
-               <a href="#">Registrazione</a>
-           </div>
-
         </div>
 <footer class="bg-light text-center text-lg-start">
   <!-- Grid container -->
@@ -107,25 +114,29 @@
     <div class="row">
       <!--Grid column-->
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Footer text</h5>
+        <h5 class="text-uppercase">Contatti</h5>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-          molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae
-          aliquam voluptatem veniam, est atque cumque eum delectus sint!
+         Email: ...
         </p>
       </div>
       <!--Grid column-->
 
       <!--Grid column-->
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Footer text</h5>
+        <h5 class="text-uppercase">Collegamenti</h5>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-          molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae
-          aliquam voluptatem veniam, est atque cumque eum delectus sint!
-        </p>
+         <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/scoreboard.html">Scoreboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
+                </li>
+              </ul>
       </div>
       <!--Grid column-->
     </div>
