--- a/who.html
+++ b/who.html
@@ -13,54 +13,50 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
-                <div class="navbar-nav">
-                      <a class="nav-item nav-link" href="#">Scoreboard</a>
-                      <a class="nav-item nav-link" href="#">Organizzatori</a>
-                    </div>        
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/scoreboard.html">Scoreboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
+                </li>
+              </ul>
             </div>
+            <div class="navbar-nav">                     
+              <a class="btn btn-primary btn-lg" href="#" role="button">Iscriviti</a>
+            </div>        
+          </div>
         </nav>
         <!-- Page content-->
-        <div class="container">
-          <section class="bg-light pt-5 pb-5 shadow-sm">
-  <div class="container">
-    <div class="row pt-5">
-      <div class="col-12">
+        <div class="container" style="background-color: #e3f2fd;">
+          <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
         <h3 class="border-bottom mb-4 text-center">Organizzatori CyberCup 2023</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-        <div class="card">
-          <img src="https://ionicframework.com/docs/img/demos/avatar.svg" class="card-img-top" alt="Card Image">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Pippo Pluto 1</h5>
-            <p class="card-text mb-4">President</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-        <div class="card">
-          <img src="https://ionicframework.com/docs/img/demos/avatar.svg" class="card-img-top" alt="Card Image">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Pippo Pluto 2</h5>
-            <p class="card-text mb-4">Vice-President</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-        <div class="card">
-          <img src="https://ionicframework.com/docs/img/demos/avatar.svg" class="card-img-top" alt="Card Image">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Pippo Pluto 3</h5>
-            <p class="card-text mb-4">Developer</p>
-          </div>
-        </div>
-      </div>
-    </div>
+   <div class="card text-center">
+  <div class="card-header">
   </div>
+  <div class="card-body">
+    <h5 class="card-title">Comitato Organizzatore:</h5>
+    <p class="card-text">Davide Maiorca - Università degli Studi di Cagliari</p>
+    <p class="card-text">Alessandro Mizzaro - Università degli Studi di Trento</p>
+    <p class="card-text">Emilio Coppa - Sapienza Università di Roma</p>
+    <p class="card-text">Massimiliano Rak - Università della Campania Luigi Vanvitelli</p>
+    <p class="card-text">Marco Carlo Feliciano - Università di degli Studi di Napoli</p>
+    <p class="card-text">Matteo Rossi - Politecnico di Torino</p>
+    <p class="card-text">Mirco Picca - Università degli Studi di Milano</p>
+    <p class="card-text">Walter Tiberti - Università degli Studi dell’Aquila</p>
+    <p class="card-text">Mario Polino - Politecnico di Milano</p>
+    <p class="card-text">Luca Veltri - Università di Parma</p>
+    <p class="card-text">Lorenzo Pisu - Università degli Studi di Cagliari</p>
+
+  </div>
+</div>
 </section>
 <br>
 <br>
@@ -88,25 +84,29 @@
     <div class="row">
       <!--Grid column-->
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Footer text</h5>
+        <h5 class="text-uppercase">Contatti</h5>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-          molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae
-          aliquam voluptatem veniam, est atque cumque eum delectus sint!
+         Email: ...
         </p>
       </div>
       <!--Grid column-->
 
       <!--Grid column-->
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Footer text</h5>
+        <h5 class="text-uppercase">Collegamenti</h5>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-          molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae
-          aliquam voluptatem veniam, est atque cumque eum delectus sint!
-        </p>
+         <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="/scoreboard.html">Scoreboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
+                </li>
+              </ul>
       </div>
       <!--Grid column-->
     </div>
@@ -116,7 +116,7 @@
 
   <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © Cybercup.IT 2022
+            © Cybercup.IT 2023
           </div>
   <!-- Copyright -->
 </footer>
