Added signup page and various layout fixes

--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
         <h5 class="text-uppercase">Contatti</h5>
 
         <p>
-         Email: ...
+         Email: davide.maiorca@unica.it
         </p>
+        <h5 class="text-uppercase">Disclaimer</h5>
+        <p>Il sito è ancora in costruzione!</p>
       </div>
       <!--Grid column-->
 
