--- a/who.html
+++ b/who.html
@@ -66,15 +66,7 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 
         </div>
 <footer class="bg-light text-center text-lg-start">
@@ -87,8 +79,10 @@
         <h5 class="text-uppercase">Contatti</h5>
 
         <p>
-         Email: ...
+         Email: davide.maiorca@unica.it
         </p>
+        <h5 class="text-uppercase">Disclaimer</h5>
+        <p>Il sito è ancora in costruzione!</p>
       </div>
       <!--Grid column-->
 
