--- a/signup.html
+++ b/signup.html
@@ -37,24 +37,23 @@
         <!-- Page content-->
         <div class="container">
            <div class="row align-items-center text-center">
-                <h1>Scoreboard</h1>
+                <h1>CyberCup.IT 2023<img src="assets/logo.png" width="50" height="50" alt=""></h1>
           </div>
-            <div class="text-center mt-5">
-                <h3>CyberCup.IT non è ancora iniziata!</h3>
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Team Name</th>
-                      <th scope="col">Affiliation</th>
-                      <th scope="col">Score</th>
-                    </tr>
-                  </thead>
-                  <tbody id="scoreboard">
-                  </tbody>
-                </table>
-            </div>
         </div>
+        <div class="container">
+          <div class="row align-items-center text-center">
+            <h3>Informativa e consenso relative al trattamento dei dati personali ex art.13 del Regolamento Generale sulla Protezione dei Dati per i partecipanti al Programma CyberCup.IT</h3><hr>
+            <div class="overflow-auto" style="max-height: 300px">Prima di procedere all' iscrizione, devi leggere questa breve informativa e scegliere se prestare dove richiesto il Tuo consenso al trattamento dei dati che ci fornirai.
+<h3>TODO: Informativa Privacy</h3></div>
+<hr>
+</div>
+<div class="row align-items-center text-center">
+<h3 style="color: red"><u>Compilando ed inviando il seguente modulo di iscrizione acconsenti al trattamento dei dati personali secondo quanto indicato nell'informativa sopra riportata</u></h3>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeSiD7YadQGt-urJOycoorrwD41P2g3Jy6XboeR3Q67t1qirw/viewform?embedded=true" width="640" height="983" frameborder="0" marginheight="0" marginwidth="0">Caricamento…</iframe>
+</div>
+           
+
+         </div>
 <footer class="bg-light text-center text-lg-start">
   <!-- Grid container -->
   <div class="container p-4">
@@ -104,6 +103,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <script>buildScoreboard();</script>
     </body>
 </html>
