Small typo fix in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <li>Partecipazione: 1 punto</li>
                 </ul>
                 <li>Peso delle competizioni</li>
-                <p>Il peso delle competizioni sarà determinato in base al numero di team iscritti. Se il numero di partecipanti che hanno preso almeno la challenge di benvenuto è inferiore al numero di soglia per applicazione del punteggio, il punteggio di classifica non si applica. Le competizioni avranno un peso, applicato al punteggio di classifica, in base al numero di </p>
+                <p>Il peso delle competizioni sarà determinato in base al numero di team iscritti. Se il numero di partecipanti che hanno preso almeno la challenge di benvenuto è inferiore al numero di soglia per applicazione del punteggio, il punteggio di classifica non si applica. Le competizioni avranno un peso, applicato al punteggio di classifica, in base al numero di partecipanti.</p>
                 <ul>
                   <li>Peso 1 se gli iscritti sono più di 100</li>
                   <li>Peso 0.75 se gli iscritti sono tra i 50 e i 99</li>
