--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>CyberCup.IT</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
+                <a class="navbar-brand" href="#"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -37,7 +37,7 @@
         <!-- Page content-->
         <div class="container">
            <div class="row align-items-center text-center">
-                <h1>CyberCup.IT 2023<img src="assets/logo.png" width="50" height="50" alt=""></h1>
+                <h1>CyberCup.IT 2023<img src="/assets/logo.png" width="50" height="50" alt=""></h1>
           </div>
         </div>
         <div class="container-fluid text-center" style="background-color: #e3f2fd;">
@@ -45,9 +45,6 @@
             <hr class="my-4">
             <h1 class="display-4">Coppa Italiana CTF</h1>
             <p class="lead">CyberCup è il primo torneo italiano di Capture The Flag</p>
-            <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Iscriviti</a>
-            </p>
             <hr class="my-4">
           </div>
         </div>
