--- a/scoreboard.html
+++ b/scoreboard.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>CyberCup.IT</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
+                <a class="navbar-brand" href="#"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -28,10 +28,7 @@
                   <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
                 </li>
               </ul>
-            </div>
-            <div class="navbar-nav">                     
-              <a class="btn btn-primary btn-lg" href="#" role="button">Iscriviti</a>
-            </div>        
+            </div>       
           </div>
         </nav>
         <!-- Page content-->
@@ -103,7 +100,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
         <script>buildScoreboard();</script>
     </body>
 </html>
