--- a/who.html
+++ b/who.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>CyberCup.IT</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
+                <a class="navbar-brand" href="#"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -28,10 +28,7 @@
                   <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
                 </li>
               </ul>
-            </div>
-            <div class="navbar-nav">                     
-              <a class="btn btn-primary btn-lg" href="#" role="button">Iscriviti</a>
-            </div>        
+            </div>     
           </div>
         </nav>
         <!-- Page content-->
@@ -54,21 +51,10 @@
     <p class="card-text">Mario Polino - Politecnico di Milano</p>
     <p class="card-text">Luca Veltri - Università di Parma</p>
     <p class="card-text">Lorenzo Pisu - Università degli Studi di Cagliari</p>
-
   </div>
 </div>
 </section>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-        </div>
+</div>
 <footer class="bg-light text-center text-lg-start">
   <!-- Grid container -->
   <div class="container p-4">
@@ -79,10 +65,8 @@
         <h5 class="text-uppercase">Contatti</h5>
 
         <p>
-         Email: davide.maiorca@unica.it
+         Email: ...
         </p>
-        <h5 class="text-uppercase">Disclaimer</h5>
-        <p>Il sito è ancora in costruzione!</p>
       </div>
       <!--Grid column-->
 
@@ -117,6 +101,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
     </body>
 </html>
