Small HTML fixes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
                 </li>
               </ul>
             </div>
-            <div class="navbar-nav">                     
-              <a class="btn btn-primary btn-lg" href="#" role="button">Iscriviti</a>
-            </div>        
           </div>
         </nav>
         <!-- Page content-->
@@ -60,7 +57,7 @@
             <h1 class="display-4">Organizzatori</h1>
             <p class="lead">Scopri chi sono gli organizzatori del progetto</p>
             <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Vai</a>
+              <a class="btn btn-primary btn-lg" href="/who.html" role="button">Vai</a>
             </p>
             <hr class="my-4">
           </div>
