--- a/who.html
+++ b/who.html
@@ -65,8 +65,10 @@
         <h5 class="text-uppercase">Contatti</h5>
 
         <p>
-         Email: ...
+         Email: davide.maiorca@unica.it
         </p>
+        <h5 class="text-uppercase">Disclaimer</h5>
+        <p>Il sito è ancora in costruzione!</p>
       </div>
       <!--Grid column-->
 
@@ -97,7 +99,6 @@
             © Cybercup.IT 2023
           </div>
   <!-- Copyright -->
-</footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
