Added discord server link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 </li>
               </ul>
             </div>
+             <div class="navbar-nav">                     
+              <a class="btn btn-primary btn-lg" href="#" role="button">Server Discord CyberCup</a>
+            </div>
           </div>
         </nav>
         <!-- Page content-->
@@ -42,6 +45,9 @@
             <hr class="my-4">
             <h1 class="display-4">Coppa Italiana CTF</h1>
             <p class="lead">CyberCup è il primo torneo italiano di Capture The Flag</p>
+            <p class="lead">
+              <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Entra nel nostro server Discord</a>
+            </p>
             <hr class="my-4">
           </div>
         </div>
