--- a/scoreboard.html
+++ b/scoreboard.html
@@ -28,7 +28,10 @@
                   <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
                 </li>
               </ul>
-            </div>       
+            </div> 
+            <div class="navbar-nav">                     
+              <a class="btn btn-primary btn-lg" href="#" role="button">Server Discord CyberCup</a>
+            </div>      
           </div>
         </nav>
         <!-- Page content-->
