--- a/who.html
+++ b/who.html
@@ -28,6 +28,9 @@
                   <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
                 </li>
               </ul>
+            </div>
+            <div class="navbar-nav">                     
+              <a class="btn btn-primary btn-lg" href="#" role="button">Server Discord CyberCup</a>
             </div>     
           </div>
         </nav>
