Fixed some hrefs in the HTML code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
+                <a class="navbar-brand" href="/"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -30,7 +30,7 @@
               </ul>
             </div>
              <div class="navbar-nav">                     
-              <a class="btn btn-primary btn-lg" href="#" role="button">Server Discord CyberCup</a>
+              <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord CyberCup</a>
             </div>
           </div>
         </nav>
