Added calendar.html to present the CTFs dates

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="/calendar.html">Calendario CTF</a>
+                </li>
               </ul>
             </div>
              <div class="navbar-nav">                     
