--- a/calendar.html
+++ b/calendar.html
@@ -31,33 +31,33 @@
                   <a class="nav-item nav-link" href="/calendar.html">Calendario CTF</a>
                 </li>
               </ul>
-            </div> 
+            </div>
             <div class="navbar-nav">                     
               <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord CyberCup</a>
-            </div>      
+            </div>     
           </div>
         </nav>
         <!-- Page content-->
-        <div class="container">
-           <div class="row align-items-center text-center">
-                <h1>Scoreboard</h1>
-          </div>
-            <div class="text-center mt-5">
-                <h3>CyberCup.IT non è ancora iniziata!</h3>
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Team Name</th>
-                      <th scope="col">Affiliation</th>
-                      <th scope="col">Score</th>
-                    </tr>
-                  </thead>
-                  <tbody id="scoreboard">
-                  </tbody>
-                </table>
-            </div>
-        </div>
+        <div class="container" style="background-color: #e3f2fd;">
+          <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
+        <h3 class="border-bottom mb-4 text-center">Calendario CTF CyberCup 2023</h3>
+   <div class="card text-center">
+  <div class="card-header">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Marzo 2023:</h5>
+    <h6>B01lers CTF</h6>
+    <p class="card-text">Inizio: 17 Marzo 2023, 22:00 UTC - Fine: 19 Marzo 2023, 22:00 UTC <br><a href="http://ctf.b01lers.com/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1875">CTFtime</a></p>
+    <h5 class="card-title">Aprile 2023:</h5>
+    <h6>HackPack CTF</h6>
+    <p class="card-text">Inizio: 14 Aprile 2023, 15:00 UTC - Fine: 15 Aprile 2023, 14:59 UTC <br><a href="https://hackpack.club/ctf2023/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1893">CTFtime</a></p>
+    <h5 class="card-title">Maggio 2023:</h5>
+    <h6>m0leCon CTF 2023 Teaser</h6>
+    <p class="card-text">Inizio: 12 Maggio 2023, 17:00 UTC - Fine: 13 Maggio 2023, 17:00 UTC <br><a href="https://m0lecon.it/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1898">CTFtime</a></p>
+  </div>
+</div>
+</section>
+</div>
 <footer class="bg-light text-center text-lg-start">
   <!-- Grid container -->
   <div class="container p-4">
@@ -107,6 +107,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
-        <script>buildScoreboard();</script>
     </body>
 </html>
