--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
               </ul>
             </div>
              <div class="navbar-nav">                     
-              <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord CyberCup</a>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="btn btn-primary btn-lg" href="/register.html" role="button" style="margin-right:10px;">Iscriviti</a>    
+                </li>         
+                <li>
+                <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
+                </li>
             </div>
           </div>
         </nav>
@@ -49,7 +55,7 @@
             <h1 class="display-4">Coppa Italiana CTF</h1>
             <p class="lead">CyberCup è il primo torneo italiano di Capture The Flag</p>
             <p class="lead">
-              <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Entra nel nostro server Discord</a>
+              <a class="btn btn-primary btn-lg" href="/register.html" role="button">Iscriviti</a>
             </p>
             <hr class="my-4">
           </div>
