--- a/who.html
+++ b/who.html
@@ -33,7 +33,13 @@
               </ul>
             </div>
             <div class="navbar-nav">                     
-              <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord CyberCup</a>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="btn btn-primary btn-lg" href="/register.html" role="button" style="margin-right:10px;">Iscriviti</a>    
+                </li>         
+                <li>
+                <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
+                </li>
             </div>     
           </div>
         </nav>
