Added logos to scoreboard
There were also added two example logos: an actual example logo, and a default logo to use for teams who don't provide a logo.

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -57,6 +57,7 @@
                       <th scope="col">Team Name</th>
                       <th scope="col">Affiliation</th>
                       <th scope="col">Score</th>
+                      <th scope="col">Logo</th>
                     </tr>
                   </thead>
                   <tbody id="scoreboard">
