First round scoreboard

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
            <div class="row align-items-center text-left">
                <h2 class="text-center">Punteggio</h2>
                <ul style="list-style-type: square;">
+                <p>I punteggi saranno calcolati basandosi sulla posizione nella classifica globale</p>
                 <p>La classifica sarà organizzata secondo i seguenti parametri:</p>
                 <li>Competizioni di tipo Jeopardy</li>
+                <p>Le squadre che si classificano come prime, seconde e terze italiane riceveranno un bonus rispettivamente di 5, 3 e 1 punti</p>
                 <ul>
                   <li>1° Classificato: 50 punti</li>
                   <li>2°/5° Classificati: 45 punti</li>
