--- a/scoreboard.html
+++ b/scoreboard.html
@@ -49,7 +49,7 @@
                 <h1>Scoreboard</h1>
           </div>
             <div class="text-center mt-5">
-                <h3>CyberCup.IT non è ancora iniziata!</h3>
+              <p>Per scaricare i dettagli della scoreboard fai click <a href="/scoreboard_history/scoreboards.pdf">QUI</a></p>
                 <table class="table">
                   <thead>
                     <tr>
