Round 3 scores + announcement round 4

--- a/calendar.html
+++ b/calendar.html
@@ -60,6 +60,9 @@
     <h5 class="card-title">Maggio 2023:</h5>
     <h6>m0leCon CTF 2023 Teaser</h6>
     <p class="card-text">Inizio: 12 Maggio 2023, 17:00 UTC - Fine: 13 Maggio 2023, 17:00 UTC <br><a href="https://m0lecon.it/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1898">CTFtime</a></p>
+    <h5 class="card-title">Giugno 2023:</h5>
+    <h6>zer0pts</h6>
+    <p class="card-text">Inizio: 17 Giugno 2023, 03:00 UTC - Fine: 18 Giugno 2023, 03:00 UTC <br><a href="http://zer0pts.com/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1972">CTFtime</a></p>
   </div>
 </div>
 </section>
