--- a/calendar.html
+++ b/calendar.html
@@ -46,23 +46,12 @@
         <!-- Page content-->
         <div class="container" style="background-color: #e3f2fd;">
           <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
-        <h3 class="border-bottom mb-4 text-center">Calendario CTF CyberCup 2023</h3>
+        <h3 class="border-bottom mb-4 text-center">Calendario CTF CyberCup 2024</h3>
    <div class="card text-center">
   <div class="card-header">
   </div>
   <div class="card-body">
-    <h5 class="card-title">Marzo 2023:</h5>
-    <h6>B01lers CTF</h6>
-    <p class="card-text">Inizio: 17 Marzo 2023, 22:00 UTC - Fine: 19 Marzo 2023, 22:00 UTC <br><a href="http://ctf.b01lers.com/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1875">CTFtime</a></p>
-    <h5 class="card-title">Aprile 2023:</h5>
-    <h6>HackPack CTF</h6>
-    <p class="card-text">Inizio: 14 Aprile 2023, 15:00 UTC - Fine: 15 Aprile 2023, 14:59 UTC <br><a href="https://hackpack.club/ctf2023/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1893">CTFtime</a></p>
-    <h5 class="card-title">Maggio 2023:</h5>
-    <h6>m0leCon CTF 2023 Teaser</h6>
-    <p class="card-text">Inizio: 12 Maggio 2023, 17:00 UTC - Fine: 13 Maggio 2023, 17:00 UTC <br><a href="https://m0lecon.it/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1898">CTFtime</a></p>
-    <h5 class="card-title">Giugno 2023:</h5>
-    <h6>GPN CTF</h6>
-    <p class="card-text">Inizio: 9 Giugno 2023, 10:00 UTC - Fine: 10 Giugno 2023, 21:59 UTC <br><a href="https://ctf.kitctf.de/">Sito Ufficiale</a> <a href="https://ctftime.org/event/1965">CTFtime</a></p>
+    <p>TBA</p>
   </div>
 </div>
 </section>
@@ -108,7 +97,7 @@
 
   <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © Cybercup.IT 2023
+            © Cybercup.IT 2024
           </div>
   <!-- Copyright -->
 </footer>
