--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="/calendar.html">Calendario CTF</a>
                 </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Hall Of Fame</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hall_of_fame_2023.html">2023 (1° Edizione)</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
              <div class="navbar-nav">                     
@@ -46,7 +52,7 @@
         <!-- Page content-->
         <div class="container">
            <div class="row align-items-center text-center">
-                <h1>CyberCup.IT 2023<img src="/assets/logo.png" width="50" height="50" alt=""></h1>
+                <h1>CyberCup.IT 2024<img src="/assets/logo.png" width="50" height="50" alt=""></h1>
           </div>
         </div>
         <div class="container-fluid text-center" style="background-color: #e3f2fd;">
@@ -54,6 +60,7 @@
             <hr class="my-4">
             <h1 class="display-4">Coppa Italiana CTF</h1>
             <p class="lead">CyberCup è il primo torneo italiano di Capture The Flag</p>
+            <p class="lead"><b>Sono aperte le iscrizioni per la 2° Edizione</b></p>
             <p class="lead">
               <a class="btn btn-primary btn-lg" href="/register.html" role="button">Iscriviti</a>
             </p>
@@ -79,6 +86,7 @@
         </div>
         <div class="container">
            <div class="row align-items-center text-left">
+            <!--
                <h2 class="text-center">Punteggio</h2>
                <ul style="list-style-type: square;">
                 <p>I punteggi saranno calcolati basandosi sulla posizione nella classifica globale</p>
@@ -115,7 +123,7 @@
                   <li>Peso 0.5 se gli iscritti sono tra i 20 e i 49</li>
                   <li>Peso 0.25 se gli iscritti sono meno di 20</li>
                 </ul>
-               </ul> 
+               </ul> -->
            </div>
         </div>
 <footer class="bg-light text-center text-lg-start">
@@ -159,7 +167,7 @@
 
   <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © Cybercup.IT 2023
+            © Cybercup.IT 2024
           </div>
   <!-- Copyright -->
 </footer>
