--- a/who.html
+++ b/who.html
@@ -46,7 +46,7 @@
         <!-- Page content-->
         <div class="container" style="background-color: #e3f2fd;">
           <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
-        <h3 class="border-bottom mb-4 text-center">Organizzatori CyberCup 2023</h3>
+        <h3 class="border-bottom mb-4 text-center">Organizzatori CyberCup 2024</h3>
    <div class="card text-center">
   <div class="card-header">
   </div>
@@ -62,6 +62,10 @@
     <p class="card-text">Mario Polino - Politecnico di Milano</p>
     <p class="card-text">Luca Veltri - Università di Parma</p>
     <p class="card-text">Lorenzo Pisu - Università degli Studi di Cagliari</p>
+    <p class="card-text">Dario Petrillo - Sapienza Università di Roma</p>
+    <p class="card-text">Giovanni Lagorio - Università degli Studi di Genova</p>
+    <p class="card-text">Eyad Issa - Università di Bologna</p>
+
   </div>
 </div>
 </section>
@@ -107,7 +111,7 @@
 
   <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © Cybercup.IT 2023
+            © Cybercup.IT 2024
           </div>
   <!-- Copyright -->
 </footer>
