CTF rounds update + small navbar fixes

--- a/hall_of_fame_2023.html
+++ b/hall_of_fame_2023.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
+         <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
                 <a class="navbar-brand" href="/"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,6 +30,12 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="/calendar.html">Calendario CTF</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Hall Of Fame</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hall_of_fame_2023.html">2023 (1° Edizione)</a></li>
+                  </ul>
                 </li>
               </ul>
             </div>
@@ -49,7 +55,8 @@
 
     <div class="jumbotron">
       <h1 class="text-center">CyberCup.IT 2023 (1° Edizione)</h1>
-      <p class="text-center">Foto della prima edizione del progetto</p>
+<br><br>
+      <h2 class="text-center">Foto della prima edizione del progetto</p>
     </div>
   
     <div class="row">
