--- a/calendar.html
+++ b/calendar.html
@@ -30,9 +30,15 @@
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="/calendar.html">Calendario CTF</a>
                 </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Hall Of Fame</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hall_of_fame_2023.html">2023 (1° Edizione)</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
-            <div class="navbar-nav">                     
+             <div class="navbar-nav">                     
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="btn btn-primary btn-lg" href="/register.html" role="button" style="margin-right:10px;">Iscriviti</a>    
@@ -40,22 +46,31 @@
                 <li>
                 <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
                 </li>
-            </div>     
+            </div>
           </div>
         </nav>
         <!-- Page content-->
-        <div class="container" style="background-color: #e3f2fd;">
-          <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
-        <h3 class="border-bottom mb-4 text-center">Calendario CTF CyberCup 2024</h3>
-   <div class="card text-center">
-  <div class="card-header">
-  </div>
-  <div class="card-body">
-    <p>TBA</p>
-  </div>
-</div>
-</section>
-</div>
+
+         <div class="container" style="background-color: #e3f2fd;">
+      <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
+        <h3 class="border-bottom mb-4 text-center">Calendario CTF CyberCup 2024 (2° Edizione)</h3>
+        <div class="card text-center">
+          <div class="card-header">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Settembre 2023 (-1° Round - Questo round non sarà conteggiato nella scoreboard finale):</h5>
+            <h6>TeamItaly CTF</h6>
+            <p class="card-text">Inizio: 30 Settembre 2023, 14:00 CEST - Fine: 1 Ottobre 2023, 14:00 CEST <br><a href="https://ctf.teamitaly.eu/">Sito Ufficiale</a> <a href="https://ctftime.org/event/2088">CTFtime</a></p>
+            <h5 class="card-title">Ottobre 2023 (1° Round):</h5>
+            <h6>Srdnlen CTF</h6>
+            <p class="card-text">Inizio: 28 Ottobre 2023, TBA - Fine: 29 Ottobre 2023, TBA <br><a href="javascript:alert('TBA')">Sito Ufficiale</a> <a href="javascript:alert('TBA')">CTFtime</a></p>
+            <h5 class="card-title">Novembre 2023 (2° Round):</h5>
+            <h6>saarCTF</h6>
+            <p class="card-text">Inizio: 18 Novembre 2023, 14:00 CET - Fine: 18 Novembre 2023, 23:00 CET <br><a href="https://ctf.saarland/">Sito Ufficiale</a> <a href="https://ctftime.org/event/2049">CTFtime</a></p>
+          </div>
+        </div>
+      </section>
+    </div>
 <footer class="bg-light text-center text-lg-start">
   <!-- Grid container -->
   <div class="container p-4">
