--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
+         <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
                 <a class="navbar-brand" href="/"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,9 +30,15 @@
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="/calendar.html">Calendario CTF</a>
                 </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Hall Of Fame</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/hall_of_fame_2023.html">2023 (1° Edizione)</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
-            <div class="navbar-nav"> 
+             <div class="navbar-nav">                     
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="btn btn-primary btn-lg" href="/register.html" role="button" style="margin-right:10px;">Iscriviti</a>    
@@ -40,8 +46,7 @@
                 <li>
                 <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
                 </li>
-              </ul>
-            </div>     
+            </div>
           </div>
         </nav>
         <!-- Page content-->
