--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
         </div>
         <div class="container">
            <div class="row align-items-center text-left">
-               <h2 class="text-center">Punteggio</h2>
+               <!--<h2 class="text-center">Punteggio</h2>
                 <p>I punteggi saranno calcolati basandosi sulla posizione nella classifica globale</p>
                 <p>Dal 1° classificato i punteggi decrementeranno in maniera proporzionale fino ad arrivare alla posizione 100°, oltre cui il punteggio sarà sempre pari a 15 apprescindere dalla posizione in classifica</p>
-                <li>Peso delle competizioni</li>
+                <h3>Peso delle competizioni</h3>
                 <p>Il peso delle competizioni sarà determinato in base al numero di team iscritti. Se il numero di partecipanti che hanno preso almeno la challenge di benvenuto è inferiore al numero di soglia per applicazione del punteggio, il punteggio di classifica non si applica. Le competizioni avranno un peso, applicato al punteggio di classifica, in base al numero di partecipanti.</p>
                 <ul>
                   <li>Peso 1 se gli iscritti sono più di 100</li>
                   <li>Peso 0.75 se gli iscritti sono tra i 50 e i 99</li>
                   <li>Peso 0.5 se gli iscritti sono tra i 20 e i 49</li>
                   <li>Peso 0.25 se gli iscritti sono meno di 20</li>
-                </ul>
+                </ul>-->
            </div>
         </div>
 <footer class="bg-light text-center text-lg-start">
