--- a/index.html
+++ b/index.html
@@ -75,10 +75,16 @@
          </div>
 
          <div class="container">
-          <div class="row align-items-center text-center">
+          <div class="row align-items-center">
                <h2>Struttura del torneo</h2>
                <p>CyberCup inizia ad Ottobre 2023 e termina a Giugno 2024. Verrà svolta una gara al mese.</p>
                <p>I team saranno divisi in due categorie: Junior e Senior. Sarà presente una classifica generale ed una classifica solo per i team Junior. I team Junior potranno partecipare ad entrambe le classifiche. </p>
+               <p>La categoria Junior può essere richiesta secondo i seguenti requisiti:</p>
+               <ul>
+                <li>Non ha raggiunto la metà della classifica nell’edizione precedente di Cybercup.it.</li>
+                <li>Riceve un endorsement da parte di un referente di sede che, sotto la propria responsabilità, dichiara che la squadra è Junior.</li>
+                <li>In caso di squadra completamente nuova (senza endorsement), che fa richiesta per essere considerata Junior, si valuterà caso per caso ad insindacabile giudizio del committee.</li>
+               </ul>
            </div>
          </div>
            <div class="container-fluid text-center" style="background-color: #e3f2fd;">
@@ -94,9 +100,19 @@
         </div>
         <div class="container">
            <div class="row align-items-center text-left">
-               <!--<h2 class="text-center">Punteggio</h2>
+               <h2 class="text-center">Punteggio</h2>
                 <p>I punteggi saranno calcolati basandosi sulla posizione nella classifica globale</p>
-                <p>Dal 1° classificato i punteggi decrementeranno in maniera proporzionale fino ad arrivare alla posizione 100°, oltre cui il punteggio sarà sempre pari a 15 apprescindere dalla posizione in classifica</p>
+                <p>Viene assegnato un gettone di presenza (1 punto) per la semplice presenza alla gara (intesa come invio del sanity check), a prescindere dal risultato</p>
+                <p>Il punteggio per ogni gara è dato dall’interpolazione lineare dei punteggi già definiti nella scorsa edizione (2022), ovvero:</p>
+                <ul> 
+                  <li>50 punti se si è arrivati primi nella classifica globale</li>
+                  <li>45 nei primi 5</li>
+                  <li>40 nei primi 10</li>
+                  <li>35 nei primi 20</li>
+                  <li>25 nei primi 50</li>
+                  <li>15 nei primi 100</li>
+                </ul>
+                <p>I dettagli della computazione si possono trovare sul <a href="https://github.com/CyberCup/punteggi_2023"> repository di GitHub dedicato</a></p>
                 <h3>Peso delle competizioni</h3>
                 <p>Il peso delle competizioni sarà determinato in base al numero di team iscritti. Se il numero di partecipanti che hanno preso almeno la challenge di benvenuto è inferiore al numero di soglia per applicazione del punteggio, il punteggio di classifica non si applica. Le competizioni avranno un peso, applicato al punteggio di classifica, in base al numero di partecipanti.</p>
                 <ul>
@@ -104,7 +120,7 @@
                   <li>Peso 0.75 se gli iscritti sono tra i 50 e i 99</li>
                   <li>Peso 0.5 se gli iscritti sono tra i 20 e i 49</li>
                   <li>Peso 0.25 se gli iscritti sono meno di 20</li>
-                </ul>-->
+                </ul>
            </div>
         </div>
 <footer class="bg-light text-center text-lg-start">
